[gd_scene load_steps=24 format=4 uid="uid://dtgdeujl30rr6"]

[ext_resource type="Script" uid="uid://bpcngkmp6fh8w" path="res://levels/the_range.gd" id="1_y7cpa"]
[ext_resource type="Material" uid="uid://72qpaeos0n2n" path="res://materials/floor_dark1.tres" id="2_deyc5"]
[ext_resource type="Material" uid="uid://2jjok7i0q8gq" path="res://materials/floor_slw_blue1.tres" id="3_deyc5"]
[ext_resource type="PackedScene" uid="uid://bsw1jkrbaf653" path="res://sound/bgm.tscn" id="3_ws1pa"]

[sub_resource type="NavigationMesh" id="NavigationMesh_dt65n"]
vertices = PackedVector3Array(-47.5, 0.59717, -196.75, -37, 0.59717, -215.25, -24.25, 0.59717, -239.25, -20.25, 0.59717, -496.5, -22.75, 0.59717, -241, -20.25, 0.59717, -242, -48.5, 0.59717, -194, -496.5, 0.59717, -496.5, -496.5, 0.59717, -194, -14, 0.59717, -238.75, -13, 0.59717, -237.75, -12, 0.59717, -235.25, 496.5, 0.59717, -235.25, 496.5, 0.59717, -496.5, -27.75, 1.34717, -200, -26, 1.34717, -199, -25.25, 0.84717, -200, -27.25, 0.59717, -202, -23.25, 0.59717, -201, -14.25, 0.59717, -230.25, -19.75, 0.59717, -199.5, -18.75, 0.59717, -196.5, -20.75, 0.59717, -192.75, -18.75, 0.59717, -191.5, -22.25, 0.59717, -201, -28.5, 0.59717, -204.75, 35.75, 0.59717, -110.25, 36.5, 0.59717, -109.75, 38, 0.59717, -106.5, 496.5, 0.59717, -106.5, -34, 0.59717, -191.5, -35.5, 0.59717, -191.75, -36.75, 0.59717, -189.25, -30.25, 0.59717, -186.75, -29, 0.59717, -188.75, -30, 0.84717, -191.5, -31.25, 1.09717, -193.25, -16.5, 0.59717, -123.25, -46.5, 0.59717, -190.5, -47.5, 0.59717, -191.5, -496.5, 0.59717, -123.25, -28, 2.09717, -195.25, -29.5, 2.34717, -196.625, -12.75, 0.59717, -129, 7.75, 0.59717, -129.25, -10.25, 0.59717, -156, -11, 0.59717, -156.5, -15.5, 0.59717, -127.25, -30.25, 0.59717, -185.75, -39.5, 0.59717, -187.5, -23.5, 0.59717, -175, -41, 0.59717, -187.5, -16.5, 0.59717, -125.25, -17.25, 0.59717, -165.75, -16.5, 0.59717, -165.25, -22.75, 0.59717, -174.5, -496.5, 0.59717, -121.5, -16.5, 0.59717, -121.5, 27.25, 0.59717, -100, 27.5, 0.59717, -100.5, 26, 0.59717, -101.75, 11, 0.59717, -92.5, 5.25, 0.59717, -86.5, -12.75, 0.59717, -115.75, -15.5, 0.59717, -117.5, 8.25, 0.59717, -80.25, 15.75, 0.59717, -117.5, 13, 0.59717, -115.75, 6.25, 0.59717, -89.75, 11.5, 0.59717, -78.5, -496.5, 0.59717, 496.5, 11.5, 0.59717, 496.5, -16.5, 0.59717, -119.5, 5.25, 0.59717, -87.75, 37, 0.59717, -103.75, 33.75, 0.59717, -101.25, 35.25, 0.59717, -100.25, 38.25, 0.59717, -93.5, 496.5, 0.59717, -93.5, 37.25, 0.59717, -91.25, 36.25, 0.59717, -90.25, 496.5, 0.59717, 496.5)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(3, 5, 4), PackedInt32Array(3, 4, 2), PackedInt32Array(0, 6, 3), PackedInt32Array(3, 6, 8), PackedInt32Array(3, 8, 7), PackedInt32Array(9, 5, 3), PackedInt32Array(10, 9, 3), PackedInt32Array(10, 3, 11), PackedInt32Array(11, 3, 12), PackedInt32Array(12, 3, 13), PackedInt32Array(16, 15, 14), PackedInt32Array(14, 17, 16), PackedInt32Array(16, 17, 18), PackedInt32Array(21, 20, 19), PackedInt32Array(23, 22, 21), PackedInt32Array(18, 17, 24), PackedInt32Array(24, 17, 25), PackedInt32Array(24, 25, 19), PackedInt32Array(21, 19, 23), PackedInt32Array(23, 19, 11), PackedInt32Array(23, 11, 26), PackedInt32Array(26, 11, 27), PackedInt32Array(27, 11, 28), PackedInt32Array(28, 11, 29), PackedInt32Array(29, 11, 12), PackedInt32Array(20, 24, 19), PackedInt32Array(32, 31, 30), PackedInt32Array(36, 35, 30), PackedInt32Array(30, 35, 34), PackedInt32Array(30, 34, 33), PackedInt32Array(30, 33, 32), PackedInt32Array(38, 37, 39), PackedInt32Array(39, 37, 40), PackedInt32Array(39, 40, 8), PackedInt32Array(14, 15, 42), PackedInt32Array(42, 15, 41), PackedInt32Array(42, 41, 36), PackedInt32Array(36, 41, 35), PackedInt32Array(8, 6, 39), PackedInt32Array(45, 44, 43), PackedInt32Array(45, 43, 46), PackedInt32Array(46, 43, 47), PackedInt32Array(33, 48, 32), PackedInt32Array(32, 48, 49), PackedInt32Array(51, 50, 38), PackedInt32Array(38, 50, 53), PackedInt32Array(38, 53, 52), PackedInt32Array(38, 52, 37), PackedInt32Array(49, 48, 51), PackedInt32Array(51, 48, 50), PackedInt32Array(54, 46, 53), PackedInt32Array(53, 46, 47), PackedInt32Array(53, 47, 52), PackedInt32Array(53, 50, 55), PackedInt32Array(40, 37, 56), PackedInt32Array(56, 37, 57), PackedInt32Array(59, 58, 60), PackedInt32Array(60, 58, 61), PackedInt32Array(63, 62, 64), PackedInt32Array(64, 62, 65), PackedInt32Array(64, 65, 56), PackedInt32Array(66, 60, 67), PackedInt32Array(67, 60, 61), PackedInt32Array(67, 61, 68), PackedInt32Array(65, 69, 56), PackedInt32Array(56, 69, 71), PackedInt32Array(56, 71, 70), PackedInt32Array(56, 57, 72), PackedInt32Array(68, 73, 67), PackedInt32Array(67, 73, 63), PackedInt32Array(64, 56, 72), PackedInt32Array(63, 73, 62), PackedInt32Array(74, 76, 75), PackedInt32Array(77, 76, 74), PackedInt32Array(74, 28, 77), PackedInt32Array(77, 28, 78), PackedInt32Array(78, 28, 29), PackedInt32Array(78, 79, 77), PackedInt32Array(78, 80, 79), PackedInt32Array(80, 78, 69), PackedInt32Array(69, 78, 71), PackedInt32Array(71, 78, 81)]
agent_height = 5.0
agent_radius = 4.0
agent_max_climb = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nkext"]
resource_name = "Material.001"
cull_mode = 2
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ebu6w"]
resource_name = "Light"
cull_mode = 2
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_trifc"]
_surfaces = [{
"aabb": AABB(-500.5, 0, -500.5, 1001, 1e-05, 1001),
"format": 34896613377,
"index_count": 24,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0A"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("AAAAAP7/AADefwAAIIAAAN5/AAD+/wAAAAAAACCAAAAggAAA3n8AAP//AAAAAAAA//8AAN5/AAAggAAAAAAAAAAAAADefwAA3n8AAAAAAADefwAA3n8AAAAAAAAAAAAAIIAAAP//AAD//wAAIIAAAP//AAD//wAAIIAAACCAAAA=")
}, {
"aabb": AABB(-500.5, 0, -500.5, 1001, 1e-05, 1001),
"format": 34896613377,
"index_count": 30,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABgAFAAcABgAHAAgABAAJAAUACgAJAAQACgALAAkADAANAA4ADAAPAA0A"),
"name": "Light",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("3n8AAP//AAAggAAAIIAAACCAAAD//wAA3n8AACCAAADefwAAIIAAACCAAADefwAAIIAAACCAAAD//wAA3n8AAP//AAAggAAA3n8AAN5/AAAAAAAAIIAAAAAAAADefwAA3n8AAN5/AAAggAAAAAAAACCAAADefwAA3n8AAAAAAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_duheo"]
resource_name = "floortest_Plane_011"
_surfaces = [{
"aabb": AABB(-500.5, 0, -500.5, 1001, 1e-05, 1001),
"attribute_data": PackedByteArray("AAD/////AAD/////AAAAAAAA/////wAA/////wAAAAAAAP////8AAP////8AAAAAAAD/////AAD/////AAAAAA=="),
"format": 34896613399,
"index_count": 24,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0A"),
"material": SubResource("StandardMaterial3D_nkext"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("AAAAAP7//7/efwAAIID/v95/AAD+//+/AAAAACCA/78ggAAA3n//v///AAAAAP+///8AAN5//78ggAAAAAD/vwAAAADef/+/3n8AAAAA/7/efwAA3n//vwAAAAAAAP+/IIAAAP///7///wAAIID/v///AAD///+/IIAAACCA/7////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/")
}, {
"aabb": AABB(-500.5, 0, -500.5, 1001, 1e-05, 1001),
"attribute_data": PackedByteArray("AAD/////AAD/////AAAAAAAA/////wAA/////wAAAAAAAP////8AAP////8AAAAAAAD/////AAD/////AAAAAAAA/////wAA/////wAAAAA="),
"format": 34896613399,
"index_count": 30,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEA"),
"material": SubResource("StandardMaterial3D_ebu6w"),
"name": "Light",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray("3n8AAP///78ggAAAIID/vyCAAAD///+/3n8AACCA/7/efwAAIID/vyCAAADef/+/IIAAACCA/7/efwAA3n//v95/AADef/+/IIAAAAAA/78ggAAA3n//v95/AAAAAP+/AAAAACCA/7/efwAA3n//v95/AAAggP+/AAAAAN5//78ggAAAIID/v///AADef/+///8AACCA/78ggAAA3n//v////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/////f////3////9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_trifc")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_atseg"]
data = PackedVector3Array(-500, 0.25, 500, 500, 0.25, 500, -500, -0.25, 500, 500, 0.25, 500, 500, -0.25, 500, -500, -0.25, 500, 500, 0.25, -500, -500, 0.25, -500, 500, -0.25, -500, -500, 0.25, -500, -500, -0.25, -500, 500, -0.25, -500, 500, 0.25, 500, 500, 0.25, -500, 500, -0.25, 500, 500, 0.25, -500, 500, -0.25, -500, 500, -0.25, 500, -500, 0.25, -500, -500, 0.25, 500, -500, -0.25, -500, -500, 0.25, 500, -500, -0.25, 500, -500, -0.25, -500, 500, 0.25, 500, -500, 0.25, 500, 500, 0.25, -500, -500, 0.25, 500, -500, 0.25, -500, 500, 0.25, -500, -500, -0.25, 500, 500, -0.25, 500, -500, -0.25, -500, 500, -0.25, 500, 500, -0.25, -500, -500, -0.25, -500)

[sub_resource type="BoxMesh" id="BoxMesh_dt65n"]
size = Vector3(25, 9, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dt65n"]
transparency = 1
albedo_color = Color(0.823529, 0.247059, 0.282353, 0.74902)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_dt65n"]
data = PackedVector3Array(-12.5, 4.5, 2.5, 12.5, 4.5, 2.5, -12.5, -4.5, 2.5, 12.5, 4.5, 2.5, 12.5, -4.5, 2.5, -12.5, -4.5, 2.5, 12.5, 4.5, -2.5, -12.5, 4.5, -2.5, 12.5, -4.5, -2.5, -12.5, 4.5, -2.5, -12.5, -4.5, -2.5, 12.5, -4.5, -2.5, 12.5, 4.5, 2.5, 12.5, 4.5, -2.5, 12.5, -4.5, 2.5, 12.5, 4.5, -2.5, 12.5, -4.5, -2.5, 12.5, -4.5, 2.5, -12.5, 4.5, -2.5, -12.5, 4.5, 2.5, -12.5, -4.5, -2.5, -12.5, 4.5, 2.5, -12.5, -4.5, 2.5, -12.5, -4.5, -2.5, 12.5, 4.5, 2.5, -12.5, 4.5, 2.5, 12.5, 4.5, -2.5, -12.5, 4.5, 2.5, -12.5, 4.5, -2.5, 12.5, 4.5, -2.5, -12.5, -4.5, 2.5, 12.5, -4.5, 2.5, -12.5, -4.5, -2.5, 12.5, -4.5, 2.5, 12.5, -4.5, -2.5, -12.5, -4.5, -2.5)

[sub_resource type="BoxMesh" id="BoxMesh_ws1pa"]
size = Vector3(100, 9, 5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_deyc5"]
data = PackedVector3Array(-50, 4.5, 2.5, 50, 4.5, 2.5, -50, -4.5, 2.5, 50, 4.5, 2.5, 50, -4.5, 2.5, -50, -4.5, 2.5, 50, 4.5, -2.5, -50, 4.5, -2.5, 50, -4.5, -2.5, -50, 4.5, -2.5, -50, -4.5, -2.5, 50, -4.5, -2.5, 50, 4.5, 2.5, 50, 4.5, -2.5, 50, -4.5, 2.5, 50, 4.5, -2.5, 50, -4.5, -2.5, 50, -4.5, 2.5, -50, 4.5, -2.5, -50, 4.5, 2.5, -50, -4.5, -2.5, -50, 4.5, 2.5, -50, -4.5, 2.5, -50, -4.5, -2.5, 50, 4.5, 2.5, -50, 4.5, 2.5, 50, 4.5, -2.5, -50, 4.5, 2.5, -50, 4.5, -2.5, 50, 4.5, -2.5, -50, -4.5, 2.5, 50, -4.5, 2.5, -50, -4.5, -2.5, 50, -4.5, 2.5, 50, -4.5, -2.5, -50, -4.5, -2.5)

[sub_resource type="BoxMesh" id="BoxMesh_deyc5"]
size = Vector3(50, 9, 5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ws1pa"]
data = PackedVector3Array(-25, 4.5, 2.5, 25, 4.5, 2.5, -25, -4.5, 2.5, 25, 4.5, 2.5, 25, -4.5, 2.5, -25, -4.5, 2.5, 25, 4.5, -2.5, -25, 4.5, -2.5, 25, -4.5, -2.5, -25, 4.5, -2.5, -25, -4.5, -2.5, 25, -4.5, -2.5, 25, 4.5, 2.5, 25, 4.5, -2.5, 25, -4.5, 2.5, 25, 4.5, -2.5, 25, -4.5, -2.5, 25, -4.5, 2.5, -25, 4.5, -2.5, -25, 4.5, 2.5, -25, -4.5, -2.5, -25, 4.5, 2.5, -25, -4.5, 2.5, -25, -4.5, -2.5, 25, 4.5, 2.5, -25, 4.5, 2.5, 25, 4.5, -2.5, -25, 4.5, 2.5, -25, 4.5, -2.5, 25, 4.5, -2.5, -25, -4.5, 2.5, 25, -4.5, 2.5, -25, -4.5, -2.5, 25, -4.5, 2.5, 25, -4.5, -2.5, -25, -4.5, -2.5)

[sub_resource type="PrismMesh" id="PrismMesh_dt65n"]
size = Vector3(10, 1.5, 6)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_k87hq"]
data = PackedVector3Array(0, 0.75, 3, 5, -0.75, 3, -5, -0.75, 3, 0, 0.75, -3, -5, -0.75, -3, 5, -0.75, -3, 0, 0.75, 3, 0, 0.75, -3, 5, -0.75, 3, 0, 0.75, -3, 5, -0.75, -3, 5, -0.75, 3, 0, 0.75, -3, 0, 0.75, 3, -5, -0.75, -3, 0, 0.75, 3, -5, -0.75, 3, -5, -0.75, -3, -5, -0.75, 3, 5, -0.75, 3, -5, -0.75, -3, 5, -0.75, 3, 5, -0.75, -3, -5, -0.75, -3)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ne5nj"]
sky_horizon_color = Color(0.59625, 0.6135, 0.653186, 1)
ground_bottom_color = Color(0, 0, 0.0627451, 1)
ground_horizon_color = Color(0.59625, 0.6135, 0.653186, 1)

[sub_resource type="Sky" id="Sky_8uoks"]
sky_material = SubResource("ProceduralSkyMaterial_ne5nj")

[sub_resource type="Environment" id="Environment_g42aa"]
background_mode = 2
background_energy_multiplier = 0.01
sky = SubResource("Sky_8uoks")
ambient_light_source = 2
ambient_light_color = Color(0, 0.0705882, 0.227451, 1)
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_05i0m"]
size = Vector3(5000, 100, 5000)

[node name="TheRange" type="Node3D"]
script = ExtResource("1_y7cpa")

[node name="BaseNav" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_dt65n")

[node name="LightfloorCross" type="MeshInstance3D" parent="BaseNav"]
mesh = SubResource("ArrayMesh_duheo")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("2_deyc5")
surface_material_override/1 = ExtResource("3_deyc5")
metadata/extras = {
"kb": {}
}

[node name="StaticBody3D" type="StaticBody3D" parent="BaseNav/LightfloorCross"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.05176e-05)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BaseNav/LightfloorCross/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_atseg")

[node name="Wall" type="StaticBody3D" parent="BaseNav"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.52747, -122.308)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BaseNav/Wall"]
mesh = SubResource("BoxMesh_dt65n")
surface_material_override/0 = SubResource("StandardMaterial3D_dt65n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BaseNav/Wall"]
shape = SubResource("ConcavePolygonShape3D_dt65n")

[node name="Wall4" type="StaticBody3D" parent="BaseNav"]
transform = Transform3D(0.901054, 0, 0.433706, 0, 1, 0, -0.433706, 0, 0.901054, 21.6804, 4.52748, -90.3847)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BaseNav/Wall4"]
mesh = SubResource("BoxMesh_dt65n")
surface_material_override/0 = SubResource("StandardMaterial3D_dt65n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BaseNav/Wall4"]
shape = SubResource("ConcavePolygonShape3D_dt65n")

[node name="Wall2" type="StaticBody3D" parent="BaseNav"]
transform = Transform3D(-0.559873, 0, 0.828579, 0, 1, 0, -0.828579, 0, -0.559873, 3.85147, 4.52746, -146.296)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BaseNav/Wall2"]
mesh = SubResource("BoxMesh_ws1pa")
surface_material_override/0 = SubResource("StandardMaterial3D_dt65n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BaseNav/Wall2"]
shape = SubResource("ConcavePolygonShape3D_deyc5")

[node name="Wall3" type="StaticBody3D" parent="BaseNav"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.52747, -122.308)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BaseNav/Wall3"]
transform = Transform3D(0.479917, 0, 0.877314, 0, 1, 0, -0.877314, 0, 0.479917, -30.2522, 0, -92.3314)
mesh = SubResource("BoxMesh_deyc5")
surface_material_override/0 = SubResource("StandardMaterial3D_dt65n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BaseNav/Wall3"]
transform = Transform3D(0.479917, 0, 0.877314, 0, 1, 0, -0.877314, 0, 0.479917, -30.2522, 0, -92.3314)
shape = SubResource("ConcavePolygonShape3D_ws1pa")

[node name="StaticBody3D" type="StaticBody3D" parent="BaseNav"]
transform = Transform3D(0.718152, 0, 1.34532, 0, 1.525, 0, -1.34532, 0, 0.718152, -30.9329, 0.74092, -191.422)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BaseNav/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.50321, 0, -0.130039)
mesh = SubResource("PrismMesh_dt65n")
surface_material_override/0 = ExtResource("2_deyc5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BaseNav/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.50321, 0, -0.130039)
shape = SubResource("ConcavePolygonShape3D_k87hq")

[node name="FloorLight" type="Timer" parent="."]
autostart = true

[node name="CameraTwist" type="Node3D" parent="."]

[node name="CameraPitch" type="Node3D" parent="CameraTwist"]

[node name="IntroCam" type="Camera3D" parent="CameraTwist/CameraPitch"]
transform = Transform3D(1, 0, 0, 0, 0.795336, 0.606169, 0, -0.606169, 0.795336, 0, 202.418, 284.797)
current = true
fov = 50.0

[node name="SetDressin" type="Node3D" parent="."]
transform = Transform3D(78.9063, 0, -61.4313, 0, 100, 0, 61.4313, 0, 78.9063, -142.92, 41.5013, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="SetDressin"]
environment = SubResource("Environment_g42aa")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SetDressin"]
transform = Transform3D(-0.990505, 0.119058, -0.0687377, 0, 0.499998, 0.866026, 0.137476, 0.857804, -0.495251, 1.18197, 0.796057, -0.920207)
light_color = Color(0.858824, 0.882353, 1, 1)
light_energy = 0.384
shadow_enabled = true

[node name="Trails" type="Node3D" parent="."]

[node name="Spawns" type="Node3D" parent="."]

[node name="Players" type="Node3D" parent="Spawns"]

[node name="Enemies" type="Node3D" parent="Spawns"]

[node name="Allies" type="Node3D" parent="Spawns"]

[node name="PlayerTanks" type="Node3D" parent="Spawns"]

[node name="PlayerSpawn" type="Node3D" parent="Spawns/PlayerTanks"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.5, -228.653)

[node name="SpawnCam" type="Camera3D" parent="Spawns/PlayerTanks/PlayerSpawn"]
transform = Transform3D(-0.675462, -0.0977421, 0.730889, 0, 0.991176, 0.132551, -0.737395, 0.0895327, -0.669501, 5.736, 2.6, -5.649)

[node name="EnemyTanks" type="Node3D" parent="Spawns"]

[node name="EnemySpawn" type="Node3D" parent="Spawns/EnemyTanks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.32, 0.5, -19.473)

[node name="EnemySpawn2" type="Node3D" parent="Spawns/EnemyTanks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 164.112, 0.5, -45.0454)

[node name="EnemySpawn3" type="Node3D" parent="Spawns/EnemyTanks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -176.549, 0.5, -72.3096)

[node name="AllyTanks" type="Node3D" parent="Spawns"]

[node name="Recognizers" type="Node3D" parent="Spawns"]

[node name="Node3D" type="Node3D" parent="Spawns/Recognizers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 27.7735, 0)

[node name="Node3D3" type="Node3D" parent="Spawns/Recognizers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34.9574, 27.7735, 39.7592)

[node name="Node3D2" type="Node3D" parent="Spawns/Recognizers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.8514, 27.7735, -47.3691)

[node name="SOS" parent="." instance=ExtResource("3_ws1pa")]
volume_db = -22.0
pitch_scale = 0.68
autoplay = false

[node name="Boxes" type="Node3D" parent="."]

[node name="ExplodeBox" type="Area3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -20.0609, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boxes/ExplodeBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -168.668, 0)
shape = SubResource("BoxShape3D_05i0m")

[node name="DespawnBox" type="Area3D" parent="Boxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -566.392, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boxes/DespawnBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -100, 0)
shape = SubResource("BoxShape3D_05i0m")

[connection signal="body_entered" from="Boxes/ExplodeBox" to="." method="_on_kill_box_body_entered"]
[connection signal="body_entered" from="Boxes/DespawnBox" to="." method="_on_despawn_box_body_entered"]
